--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.6"
+
+[dependencies.rocket_contrib]
+version = "0.4.6"
+default-features = false
+features = ["json", "handlebars_templates", "helmet", "uuid", "serve"]
