--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.6"
+serde_json = "1.0"
+serde_derive = "1.0.118"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
