--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2018"
 rocket = "0.4.6"
 serde_json = "1.0"
 serde_derive = "1.0.118"
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
+uuid = "0.8"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
