--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde_derive = "1.0.118"
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
 uuid = "0.8"
+rusoto_core = "0.46.0"
+rusoto_dynamodb = "0.46.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
