--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ dotenv_codegen = "0.15.0"
 uuid = "0.8"
 rusoto_core = "0.46.0"
 rusoto_dynamodb = "0.46.0"
+rusoto_sts = "0.46.0"
+rusoto_credential = "0.46.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
