--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ rusoto_dynamodb = "0.46.0"
 rusoto_sts = "0.46.0"
 rusoto_credential = "0.46.0"
 dynomite = "0.10"
+hyper = "0.14.2"
+hyper-tls = "0.5.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
