--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ dynomite = "0.10"
 hyper = "0.14.2"
 hyper-tls = "0.5.0"
 chrono = "0.4.19"
+async-trait = "0.1.42"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
