--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.6"
+serde = "1.0.119"
 serde_json = "1.0"
 serde_derive = "1.0.118"
 dotenv = "0.15.0"
