--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ hyper = "0.14.2"
 hyper-tls = "0.5.0"
 chrono = "0.4.19"
 async-trait = "0.1.42"
+futures = "0.3.12"
+tokio = {version = "1.0.2", features = ["full"] }
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
