--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.6"
 serde = "1.0.119"
-serde_json = "1.0"
+serde_json = { version = "1.0.61", features = ["arbitrary_precision"]}
 serde_derive = "1.0.118"
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
