--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ chrono = "0.4.19"
 async-trait = "0.1.42"
 futures = "0.3.12"
 tokio = {version = "1.0.2", features = ["full"] }
+rusoto_s3 = "0.46.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
