--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1.0.2", features = ["full"] }
 rusoto_s3 = "0.46.0"
 log = { version = "0.4" }
 fern = "0.6.0"
+strip-ansi-escapes = "0.1.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
