--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/YashdalfTheGray/magmsg-server/issues"
   },
-  "homepage": "https://github.com/YashdalfTheGray/magmsg-server#readme"
+  "homepage": "https://github.com/YashdalfTheGray/magmsg-server#readme",
+  "devDependencies": {
+    "postcss-loader": "^5.0.0",
+    "prettier": "^2.2.1",
+    "sass-loader": "^11.0.1",
+    "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^4.2.3",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0"
+  }
 }
