--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "typescript": "^4.2.3",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "@types/lodash.merge": "^4.6.6",
+    "lodash.merge": "^4.6.2"
   }
 }
