--- a/package.json
+++ b/package.json
@@ -19,8 +19,21 @@
   },
   "homepage": "https://github.com/YashdalfTheGray/magmsg-server#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.9.1",
+    "css-loader": "^5.1.1",
+    "cssnano": "^4.1.10",
+    "mini-css-extract-plugin": "^1.3.9",
+    "postcss": "^8.2.7",
     "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
+    "regenerator-runtime": "^0.13.7",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
