--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A server that stores and backs up the messages sent to the edge",
   "main": "public/main.js",
   "scripts": {
-    "clean": "npx rimraf public/**/*.{js,map,css,json}",
+    "clean": "npm exec rimraf public/**/*.{js,map,css,json}",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production"
   },
