--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ### Project specific ###
 public/main.css
 public/main.js
+public/main.js*
+public/main.css*
 
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
