added a watcher task and a command that starts things up

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "clean": "npm exec rimraf public/**/*.{js,map,css,json}",
     "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production"
+    "build:watch": "webpack --mode=development --watch",
+    "build:prod": "webpack --mode=production",
+    "start:assets": "npm run build:watch"
   },
   "repository": {
     "type": "git",
