--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^6.0.0",
     "core-js": "^3.9.1",
     "css-loader": "^5.1.1",
     "cssnano": "^4.1.10",
